# paperless-mcp

./: .gitignore  README.md  docker-compose.e2e.yml  manifest.json  package.json  paperless-signed-upload-spec.md  smithery.yaml  tsconfig.json
.changeset/: lucky-moons-invent.md  olive-poets-shave.md  proud-lions-attack.md  soft-shirts-tap.md  spicy-pugs-search.md  tall-panthers-shout.md  warm-ducks-repeat.md
e2e/: e2e.test.ts
proxy/: Cargo.toml  Dockerfile  README.md  build-and-push.sh  docker-compose.example.yml
proxy/src/: config.rs  crypto.rs  handlers.rs  lib.rs  main.rs  state.rs
proxy/tests/: proxy.rs
src/: index.ts  server.ts
src/api/: PaperlessAPI.ts  documentEnhancer.test.ts  documentEnhancer.ts  types.ts
src/test/mocks/: paperlessApi.ts
src/tools/: annotations.test.ts  correspondents.ts  customFields.ts  documentTypes.ts  documents.test.ts  documents.ts  mail.test.ts  mail.ts  notes.ts  storagePaths.ts  system.test.ts  system.ts  tags.ts  uploadProxy.test.ts  uploadProxy.ts  users.test.ts  users.ts  workflows.test.ts  workflows.ts
src/tools/utils/: annotations.ts  documentQuery.ts  resolve.test.ts  resolve.ts
