[package]
name = "paperless-upload-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Single-purpose upload proxy for Paperless-NGX: mints short-lived, single-use capability URLs and streams uploads to Paperless with the minting user's token."

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
# rustls-tls (webpki roots compiled in) so HTTPS Paperless URLs work from the
# distroless image, which ships no CA bundle.
reqwest = { version = "0.12", default-features = false, features = ["stream", "multipart", "json", "rustls-tls"] }
chacha20poly1305 = "0.10"
zeroize = "1"
getrandom = "0.3"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
strip = true
lto = true
